--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-<p>STEVAWN GHAZIMAHALLEH</p>
+
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>The Ghazimahalleh Family</title>
+	</head>
+	<body>
+		<header>
+			<h1>The Ghazimahalleh's</h1>
+			<nav>
+				<ul>
+					<li><a href="#stevawn">Stevawn</a></li>
+					<li><a href="#aaron">Aaron</a></li>
+					<li><a href="#noah">Noah</a></li>
+					<li><a href="#ethan">Ethan</a></li>
+				</ul>
+			</nav>
+		</header>
+
+		<main>
+			<article>
+				<section>
+					<a name="stevawn"></a>
+					<h2>Stevawn</h2>
+					<p>Stevawn is 28 years old and mother to two young boys.  Currently, she is the Assistant Manager at Petco.  When not working, she enjoys spending time with her family and practicing her programming skills.</p>
+					<figure>
+						<img src="images/stevawn.jpg" alt="image of Stevawn, a white woman with dark hair and light eyes with two white male children" />
+						<figcaption>Stevawn and her two sons, Noah and Ethan.</figcaption>
+					</figure>
+				</section>
+				<section>
+					<a name="aaron"></a>
+					<h2>Aaron</h2>
+					<p>Aaron is 28 years old and father to two young boys.  He is currently a Systems Engineer at Columbia Distributing.  When he is not working, he enjoys spending time with his family and playing video games.</p>
+					<figure>
+						<img src="images/aaron.jpg" alt="A white presenting male with dark hair and features holding the hands of a white, male infant." />
+						<figcaption>Aaron and his oldest son (as an infant).</figcaption>
+					</figure>
+				</section>
+				<section>
+					<a name="noah"></a>
+					<h2>Noah</h2>
+					<p>Noah is 2 years old.  He loves Mickey Mouse, Elena of Avalor, Paw Patrol, and Zootopia.  He is scheduled for surgery on Friday, June 16th for an adenoidectomy.</p>
+					<figure>
+						<img src="images/noah.jpg" alt="Close up of white, male toddler's face.  He is looking directly into the camera and smiling." />
+						<figcaption>Noah is a total ham and loves having his picture taken.</figcaption>
+					</figure>
+				</section>
+				<section>
+					<a name="ethan"></a>
+					<h2>Ethan</h2>
+					<p>Ethan is 14 weeks old.  He loves watching his brother and smiles all of the time.  Ethan has a condition called craniosynostosis.  This means that the sutures in his skull are fusing prematurely.  The fusion causes an odd head shape because the skull can not expand as it normally would.  This condition affects 1 in 2000 births and will require a craniotomy.</p>
+					<figure>
+						<img src="images/ethan.jpg" alt="A black and white photo of a small, white baby.  He is wearing a Portland Timbers jersey and there is a caption in the lower left corner that says 3 months." />
+						<figcaption>Ethan at 3 months old.</figcaption>
+					</figure>
+				</section>
+				</aside>
+			</article>
+		</main>
+		<footer>
+			<p>&copy; 2017 Stevawn Ghazi</p>
+		</footer>
+	</body>
+</html>
