--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" href="normalize.css">
+		<link rel="stylesheet" href="styles.css">
 		<title>The Ghazimahalleh Family</title>
 	</head>
 	<body>
