Added new fonts and background image.  Created .gitignore file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="normalize.css">
+		<link href="https://fonts.googleapis.com/css?family=Bubbler+One|Dancing+Script" rel="stylesheet">
 		<link rel="stylesheet" href="styles.css">
 		<title>The Ghazimahalleh Family</title>
 	</head>
@@ -18,7 +19,6 @@
 				</ul>
 			</nav>
 		</header>
-
 		<main>
 			<article>
 				<section>
